--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,38 @@ services:
       - PORT=9000
     ports:
       - "9000:9000"
+    healthcheck:
+      test: ["CMD-SHELL", "lsof -i :9000 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
   frontend:
     build: ./frontend
     container_name: sse-frontend
-    ports:
-      - "8080:80"
     depends_on:
       - backend
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+  nginx:
+    image: nginx:latest
+    container_name: sse-nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
+    depends_on:
+      backend:
+        condition: service_healthy
+      frontend:
+        condition: service_healthy
+    restart: 'on-failure'
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
@@ -65,6 +89,3 @@ services:
       - prometheus
     ports:
       - "3000:3000"
-
-# volumes:
-#   grafana_data:
