--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,10 @@
-# Build stage
 FROM node:18 AS build
 WORKDIR /app
-COPY . .
+COPY package.json ./
 RUN npm install
+COPY . .
 RUN npm run build
 
-# Serve stage
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
