--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,25 +1,12 @@
 server {
-  listen 80;
-  server_name _;
+    listen 80;
+    server_name localhost;
 
-  root /usr/share/nginx/html;
-  index index.html;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
-  location / {
-    try_files $uri /index.html;
-  }
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 
-  location /api/ {
-    proxy_pass http://backend:9000;
-    proxy_http_version 1.1;
-
-    proxy_set_header Connection '';
-    proxy_buffering off;
-    proxy_cache off;
-    chunked_transfer_encoding off;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
 }
