--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,16 @@ services:
   backend:
     build: ./backend
     container_name: sse-backend
-    restart: 'on-failure'
+    restart: unless-stopped
     environment:
       - MONGODB_URI=mongodb+srv://zildirayalfirli:Zildiray123@warningsystem.eextqwr.mongodb.net/?retryWrites=true&w=majority&appName=WarningSystem
       - PORT=9000
     ports:
       - "9000:9000"
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
     healthcheck:
       test: ["CMD-SHELL", "lsof -i :9000 || exit 1"]
       interval: 10s
@@ -20,6 +24,11 @@ services:
   frontend:
     build: ./frontend
     container_name: sse-frontend
+    restart: unless-stopped
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
     depends_on:
       - backend
     healthcheck:
@@ -32,60 +41,85 @@ services:
   nginx:
     image: nginx:latest
     container_name: sse-nginx
+    restart: unless-stopped
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "80:80"
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
     depends_on:
       backend:
         condition: service_healthy
       frontend:
         condition: service_healthy
-    restart: 'on-failure'
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: sse-backend-cadvisor
-    restart: always
+    restart: unless-stopped
     ports:
       - "8181:8080"
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
       - /:/rootfs:ro
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
       - /var/run/docker.sock:/var/run/docker.sock:rw
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
     devices:
       - /dev/kmsg:/dev/kmsg
     depends_on:
       - backend
 
+  node_exporter:
+    image: prom/node-exporter:latest
+    container_name: sse-node-exporter
+    restart: unless-stopped
+    ports:
+      - "9100:9100"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+      - /etc/hostname:/etc/hostname:ro
+      - /etc/os-release:/etc/os-release:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/overlay2|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/image)($$|/)'
+
   prometheus:
     image: prom/prometheus:latest
     container_name: sse-backend-prometheus
-    restart: always
+    restart: unless-stopped
     ports:
       - "9090:9090"
     volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+    depends_on:
+      - cadvisor
+      - node_exporter
 
   grafana:
     image: grafana/grafana:latest
     container_name: sse-backend-grafana
+    restart: unless-stopped
+    user: "0"
+    ports:
+      - "3000:3000"
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
       - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/data:/var/lib/grafana
-    user: "0"
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
     depends_on:
       - prometheus
-    ports:
-      - "3000:3000"
